[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 583.0
margin_top = 148.0
margin_right = 727.0
margin_bottom = 283.0
rect_pivot_offset = Vector2( 47, 44 )
text = "coleta de dados"

[node name="Button2" type="Button" parent="."]
margin_left = 584.0
margin_top = 309.0
margin_right = 728.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 47, 44 )
text = "MOSTRAR LISTA"

[node name="Button3" type="Button" parent="."]
margin_left = 584.0
margin_top = 440.0
margin_right = 728.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 47, 44 )
text = "MOSTRAR NOME"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 73.0
margin_top = 142.0
margin_right = 237.0
margin_bottom = 281.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 282.0
margin_top = 140.0
margin_right = 446.0
margin_bottom = 279.0

[node name="Label" type="Label" parent="."]
margin_left = 69.0
margin_top = 68.0
margin_right = 247.0
margin_bottom = 122.0
text = "INSIRA UM NUMERO"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 270.0
margin_top = 68.0
margin_right = 448.0
margin_bottom = 122.0
text = "INSIRA UM NOME"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 71.0
margin_top = 309.0
margin_right = 505.0
margin_bottom = 421.0

[node name="Label4" type="Label" parent="."]
margin_left = 69.0
margin_top = 430.0
margin_right = 503.0
margin_bottom = 542.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
